kubernetes/deployment-p2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-two
  namespace: casche
  labels:
    app: project-two
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-two
  template:
    metadata:
      labels:
        app: project-two
    spec:
      volumes:
      - name: config-casche-p1
        configMap:
          name: fluent-conf
      containers:
      - name: fluentd
        image: grafana/fluent-plugin-loki:latest
        ports:
        - containerPort: 24224
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config-js-p1
          mountPath: /fluentd/etc/fluent.conf
          subPath: fluent.conf
      - name: p1-application
        image: sentrurion/casche-project-two:latest
        ports:
        - containerPort: 8080
        imagePullPolicy: Always # IfNotPresent
