kubernetes/p-one-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-one
  namespace: jonathan-schmitz
  labels:
    app: project-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-one
  template:
    metadata:
      labels:
        app: project-one
    spec:
      volumes:
      - name: config-js-p1
        configMap:
          name: fluent-conf
      containers:
      - name: fluentd
        image: grafana/fluent-plugin-loki:latest
        ports:
        - containerPort: 24224
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config-js-p1
          mountPath: /fluentd/etc/fluent.conf
          subPath: fluent.conf
      - name: p1-application
        image: sentrurion/project-one:latest
        ports:
        - containerPort: 8080
        imagePullPolicy: IfNotPresent
