kubernetes/service-p2.yml
apiVersion: v1
kind: Service
metadata:
  name: project-two
  namespace: casche
  labels:
    app: project-two
spec:
  selector:
    app: project-two
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
