kubernetes/ingress-p2.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: project-two
  namespace: casche
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /isms/?(.*)
        backend:
          serviceName: project-two
          servicePort: 8080
